--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <version>1.0</version>
     <developers>
         <developer>
-            <id><!-- TODO: your id --></id>
-            <name><!-- TODO: your name --></name>
-            <email><!-- TODO: your email --></email>
+            <id>LKO2QJ</id>
+            <name>Kalló György Dávid</name>
+            <email>kallogyorgy5@gmail.com</email>
             <organization>Faculty of Informatics</organization>
             <organizationUrl>https://www.inf.unideb.hu/</organizationUrl>
         </developer>
